ack/prd/magnolia-author-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    k8s.kuboard.cn/workload: magnolia-author-frontend
  labels:
    k8s.kuboard.cn/name: magnolia-author-frontend
  name: magnolia-author-frontend
  namespace: zb-schools
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s.kuboard.cn/name: magnolia-author-frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        karpenter.sh/do-not-disrupt: "true"
        kubectl.kubernetes.io/restartedAt: "2024-06-26T14:15:57+08:00"
      creationTimestamp: null
      labels:
        k8s.kuboard.cn/name: magnolia-author-frontend
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  k8s.kuboard.cn/name: magnolia-author-backend
              topologyKey: kubernetes.io/hostname
      containers:
        - image: "registry.cn-chengdu.aliyuncs.com/sph-prd/magnolia-author-frontend:v"
          imagePullPolicy: IfNotPresent
          name: magnolia-author-frontend
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 50
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 2
          resources:
            limits:
              cpu: "2"
              memory: 2Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: confd
              subPath: default.conf
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: sph-ack-test
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: default.conf
                path: default.conf
            name: author-nginx-conf
          name: confd
---
apiVersion: v1
kind: Service
metadata:
  namespace: zb-schools
  name: magnolia-author-frontend-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    k8s.kuboard.cn/name: magnolia-author-frontend
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 86400
