ack/prd/magnolia-public-mobile.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magnolia-public-mobile
  namespace: zb-schools
  labels:
    k8s.kuboard.cn/name: nginx-mobile
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s.kuboard.cn/name: nginx-mobile
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8s.kuboard.cn/name: nginx-mobile
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    k8s.kuboard.cn/name: saas-homework-service
                topologyKey: kubernetes.io/hostname
              weight: 100
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    k8s.kuboard.cn/name:  nginx-mobile
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - image: "registry.cn-chengdu.aliyuncs.com/sph-prd/sph-mobile:v"
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 2
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: volume-conf
              subPath: default.conf
      restartPolicy: Always
      schedulerName: default-scheduler
      imagePullSecrets:
        - name: sph-ack-test
      securityContext: {}
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: nginx-mobile.conf
                path: default.conf
            name: mobile-nginx-conf
          name: volume-conf

---
apiVersion: v1
kind: Service
metadata:
  name: magnolia-public-mobile-svc
  namespace: zb-schools
spec:
  ports:
    - name: ngmobile
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    k8s.kuboard.cn/name: nginx-mobile
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 86400
