ack/prd/saas-homework-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    k8s.kuboard.cn/workload: saas-homework-service
  labels:
    k8s.kuboard.cn/name: saas-homework-service
  name: saas-homework-service
  namespace: zb-schools
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s.kuboard.cn/name: saas-homework-service
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kms-agent-webhook-injector/inject: "true"
      creationTimestamp: null
      labels:
        k8s.kuboard.cn/name: saas-homework-service
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: k8s.kuboard.cn/name
                  operator: In
                  values:
                  - magnolia-author-backend
                  - magnolia-public-backend
                  - saas-homework-service
              topologyKey: kubernetes.io/hostname
      containers:
        - command:
            - /bin/bash
            - "-ce"
            - java  -Xms1g -Xmx2g -Dnewrelic.environment=prd -javaagent:/opt/app/newrelic.jar -jar /opt/app/saas-homework-service.jar -server.tomcat.max-threads=1500
          image: "registry.cn-chengdu.aliyuncs.com/sph-prd/saas-homework-service:v"
          imagePullPolicy: IfNotPresent
          name: homework
          ports:
            - containerPort: 8080
              name: port8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 2
          resources:
            limits:
              cpu: "2"
              memory: 3Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: sph-ack-test
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      serviceAccountName: zb-schools-sc
---
apiVersion: v1
kind: Service
metadata:
  namespace: zb-schools
  name: saas-homework-service-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    k8s.kuboard.cn/name: saas-homework-service
