ack/prd/saas-transfer-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saas-transfer-service
  namespace: zb-schools
  labels:
    k8s.kuboard.cn/name: saas-transfer-service
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      k8s.kuboard.cn/name: saas-transfer-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kms-agent-webhook-injector/inject: "true"
      creationTimestamp: null
      labels:
        k8s.kuboard.cn/name: saas-transfer-service
    spec:
      containers:
        - command:
            - /bin/bash
            - "-ce"
            - java  -Xms1024m -Xmx2048m -jar /opt/app/saas-transfer-service.jar
          image: "registry.cn-chengdu.aliyuncs.com/sph-prd/saas-transfer-service:v"
          imagePullPolicy: IfNotPresent
          name: transfer
          ports:
            - containerPort: 8081
              name: port8081
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8081
            timeoutSeconds: 2
          resources:
            limits:
              cpu: "1"
              memory: 3Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: sph-ack-test
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      serviceAccountName: zb-schools-sc
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    k8s.kuboard.cn/name: saas-transfer-service
  name: saas-transfer-service
  namespace: zb-schools
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    k8s.kuboard.cn/name: saas-transfer-service
  sessionAffinity: None
  type: ClusterIP
