ack/prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: zb-schools
  name: ingress-zb-schools
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-group-attributes: "stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=86400"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: "subnet-042846e2cf598d378, subnet-00b8c5f4e5889bc2a, subnet-085e7be1fc5e5e0b7"
    alb.ingress.kubernetes.io/load-balancer-name: "ingress-lb-zb-schools-prd"
    alb.ingress.kubernetes.io/security-groups: "sg-09f502a8ba4bef043, sg-04d7eb341d98178af, sg-0e118d8a7229274e5"
    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true,access_logs.s3.enabled=true,access_logs.s3.bucket=s3-sph-zb-schools-prd-access-log-bucket
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:ap-southeast-1:905418451605:regional/webacl/zb-schools-prd-ingress-alb-wafv2/5eef52cd-e78a-48fa-9c20-38e778669a44
spec:
  ingressClassName: alb
  rules:
    - host: www.zbschools.sg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magnolia-public-frontend-svc
                port:
                  number: 80
          - path: /magnoliaPublic
            pathType: Prefix
            backend:
              service:
                name: magnolia-public-backend-svc
                port:
                  number: 8080
          - path: /authorFrontend
            pathType: Prefix
            backend:
              service:
                name: magnolia-author-frontend-svc
                port:
                  number: 80
          - path: /magnoliaAuthor
            pathType: Prefix
            backend:
              service:
                name: magnolia-author-backend-svc
                port:
                  number: 8080
          - path: /share
            pathType: Prefix
            backend:
              service:
                name: magnolia-public-frontend-svc
                port:
                  number: 80
    - host: m.zbschools.sg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magnolia-public-mobile-svc
                port:
                  number: 80
          - path: /magnoliaPublic
            pathType: Prefix
            backend:
              service:
                name: magnolia-public-backend-svc
                port:
                  number: 8080
          - path: /lms
            pathType: Prefix
            backend:
              service:
                name: magnolia-public-frontend-svc
                port:
                  number: 80
    - host: admin.zbschools.sg
      http:
        paths:
          - backend:
              service:
                name: magnolia-public-backend-svc
                port:
                  number: 8080
            path: /
            pathType: Prefix
